--- a/src/app/matchup/typechart/typechart.component.html
+++ b/src/app/matchup/typechart/typechart.component.html
@@ -1,11 +1,11 @@
 <div class="w-fit">
-    <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-3 text-sm border-b"
+    <button (click)="swapTeams()" class="px-3 text-sm border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
         [ngClass]="teamColor(true)">Swap</button>
-    <table class="table-fixed overflow-auto touch-auto border-4 border-slate-400">
+    <table class="overflow-auto border-4 table-fixed touch-auto border-slate-400">
         <thead class="">
             <tr class="">
                 <th class="left-0 border-r-4 border-slate-400" [ngClass]="teamColor()"></th>
-                <th class="left-0 bg-slate-300 border-b-2 border-slate-400" *ngFor="let type of types">
+                <th class="left-0 border-b-2 bg-slate-300 border-slate-400" *ngFor="let type of types">
                     <img class="" src="https://play.pokemonshowdown.com/sprites/types/{{type}}.png" alt={{type}}>
                 </th>
             </tr>
