--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -1,33 +1,33 @@
-<div class="bg-red-200 shadow-md  shadow-red-600 m-2 rounded-xl">
-    <div class="bg-red-300 shadow-md p-2 rounded-xl">
-        <div class="w-full flex">
-            <div class="text-medium bg-red-200 w-3/5 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
+<div class="m-2 bg-red-200 shadow-md shadow-red-600 rounded-xl">
+    <div class="p-2 bg-red-300 shadow-md rounded-xl">
+        <div class="flex w-full">
+            <div class="w-3/5 p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600">
                 {{ matchup.bTeam.teamName }}</div>
-            <div class="w-1/5 h-fit text-xs bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 text-center">
+            <div class="w-1/5 p-1 text-xs text-center bg-red-200 rounded-full shadow-inner h-fit shadow-red-600">
                 {{ score(matchup.score) }}</div>
-            <div class="w-1/5 h-fit text-xs bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
+            <div class="w-1/5 p-1 mx-1 text-xs text-center bg-red-200 rounded-full shadow-inner h-fit shadow-red-600">
                 {{ matchup.stage }}</div>
         </div>
-        <div class="sprites grid grid-cols-6 px-4 pt-2">
+        <div class="grid grid-cols-6 px-4 pt-2 sprites">
             <sprite *ngFor="let pokemon of matchup.bTeam.team" [pokemonId]="pokemon.pid"></sprite>
         </div>
     </div>
     <div class="flex" *ngIf="!deleteConfirm">
-        <a class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2 text-red-400">Score</a>
-        <a class="w-1/2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
+        <a class="w-1/4 m-2 text-center text-red-400 bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl">Score</a>
+        <a class="w-1/2 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
             [routerLink]="'/draft/matchup/'+matchup._id">Prep</a>
-        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2 text-red-400">Edit
+        <a class="m-2 text-center text-red-400 bg-red-300 shadow w-1/8 hover:shadow shadow-red-600 rounded-xl">Edit
         </a>
-        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
+        <a class="m-2 text-center bg-red-300 shadow w-1/8 hover:shadow shadow-red-600 rounded-xl"
             (click)="deleteConfirm=true">Delete
         </a>
     </div>
     <div class="flex" *ngIf="deleteConfirm">
-        <div class="w-1/2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Are you sure you
+        <div class="w-1/2 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl">Are you sure you
             want to delete?</div>
-        <div class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
+        <div class="w-1/4 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
             (click)="deleteMatchup(matchup._id)">Yes</div>
-        <div class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
+        <div class="w-1/4 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
             (click)="deleteConfirm=false">No
         </div>
     </div>
