--- a/src/app/draft-overview/draft-form/draft-form.component.html
+++ b/src/app/draft-overview/draft-form/draft-form.component.html
@@ -1,31 +1,31 @@
-<p class="bold text-3xl">New League</p>
+<p class="text-3xl bold">New League</p>
 <form [formGroup]="draftForm" (ngSubmit)="onSubmit()"
-  class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl space-y-3">
+  class="p-2 m-2 space-y-3 shadow-md team bg-cyan-300 hover:shadow-md shadow-cyan-600 rounded-xl">
   <div class="w-full">
     <div class="flex space-x-3">
       <div class="w-1/3">
         <label class="p-1">League Name</label>
         <input formControlName="leagueName"
-          class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          class="w-full p-1 mx-1 text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600">
       </div>
       <div class="w-1/3">
         <label class="p-1">Team Name</label>
         <input formControlName="teamName"
-          class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          class="w-full p-1 mx-1 text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600">
       </div>
       <div class="w-1/6">
         <label class="p-1">Format</label>
         <input formControlName="format"
-          class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          class="w-full p-1 mx-1 text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600">
       </div>
       <div class="w-1/6">
         <label class="p-1">Ruleset</label>
         <input formControlName="ruleset"
-          class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          class="w-full p-1 mx-1 text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600">
       </div>
     </div>
   </div>
-  <div class="border-2 border-rose-200 rounded-xl p-2">
+  <div class="p-2 border-2 border-rose-200 rounded-xl">
     <ul>
       <ol *ngFor="let pokemonForm of teamArray.controls; let i = index">
         <pokemon-form [pokemonForm]="$any(pokemonForm)" [formIndex]="i" (deletePokemonEvent)="deletePokemon($event)"
@@ -33,9 +33,9 @@
       </ol>
     </ul>
     <button (click)="addNewPokemon()"
-      class="bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Add</button>
+      class="px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600">Add</button>
   </div>
   <button type="submit"
-    class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Submit</button>
+    class="w-1/6 px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600">Submit</button>
 </form>
 {{draftForm.value | json}}<br>
