--- a/src/app/matchup/matchup.component.html
+++ b/src/app/matchup/matchup.component.html
@@ -1,17 +1,17 @@
 <div class="bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
     <!-- <a routerLink="/draft/{{draft.leagueId}}"
-        class="bg-slate-300 rounded-full px-2 shadow hover:shadow shadow-slate-600">Back</a> -->
-    <!-- <div class="absolute z-0 w-full flex">
-        <div class="w-1/2 grid grid-cols-3">
+        class="px-2 rounded-full shadow bg-slate-300 hover:shadow shadow-slate-600">Back</a> -->
+    <!-- <div class="absolute z-0 flex w-full">
+        <div class="grid w-1/2 grid-cols-3">
             <sprite class="z-0 w-full" *ngFor="let pokemon of draft.team" [pokemonId]="pokemon.pid" [flipped]="true">
             </sprite>
         </div>
-        <div class="w-1/2 grid grid-cols-3">
+        <div class="grid w-1/2 grid-cols-3">
             <sprite class="z-0 w-full" *ngFor="let pokemon of draft.team" [pokemonId]="pokemon.pid">
             </sprite>
         </div>
     </div> -->
-    <div class="flex flex-wrap text-xs p-2">
+    <div class="flex flex-wrap p-2 text-xs">
         <overview class="z-10 m-2" [matchupId]="this.matchup_id"></overview>
         <summery class="z-10 m-2" [matchupId]="this.matchup_id"></summery>
         <typechart class="z-10 m-2" [matchupId]="this.matchup_id"></typechart>
