--- a/src/app/matchup/movechart/movechart.component.html
+++ b/src/app/matchup/movechart/movechart.component.html
@@ -1,15 +1,15 @@
 <div class="">
-    <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b"
+    <button (click)="swapTeams()" class="px-2 border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
         [ngClass]="teamColor(true)">⇄</button>
-    <div class="max-h-128 overflow-auto w-128 border-4 border-slate-400 bg-slate-400">
+    <div class="overflow-auto border-4 max-h-128 w-128 border-slate-400 bg-slate-400">
         <div *ngFor="let category of this.teams[selectedTeam]">
-            <div class="bg-slate-300 sticky top-0 left-0 text-lg border-b-2 border-slate-400 text-center font-bold">
+            <div class="sticky top-0 left-0 text-lg font-bold text-center border-b-2 bg-slate-300 border-slate-400">
                 {{category.catName}}
             </div>
             <div class="">
                 <div class="flex border-b-2 border-slate-400 bg-slate-200" *ngFor="let move of category.moves">
                     <div class="w-1/3 border-r border-slate-400">{{move.moveName}}</div>
-                    <div class="w-2/3 flex flex-row flex-wrap">
+                    <div class="flex flex-row flex-wrap w-2/3">
                         <sprite class="h-8" *ngFor="let pokemon of move.pokemon" [pokemonId]="pokemon"></sprite>
                     </div>
                 </div>
