--- a/src/app/opponent-overview/opponent-form/opponent-form.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form.component.html
@@ -1,21 +1,21 @@
-<p class="bold text-3xl">New Draft</p>
+<p class="text-3xl bold">New Draft</p>
 <form [formGroup]="matchupForm" (ngSubmit)="onSubmit()"
-  class="team bg-red-300 shadow-md hover:shadow-md shadow-red-600 m-2 p-2 rounded-xl space-y-3">
+  class="p-2 m-2 space-y-3 bg-red-300 shadow-md team hover:shadow-md shadow-red-600 rounded-xl">
   <div class="w-full">
     <div class="flex space-x-3">
       <div class="w-1/3">
         <label class="p-1">Team Name</label>
         <input formControlName="teamName"
-          class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
+          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600">
       </div>
       <div class="w-1/3">
         <label class="p-1">Stage</label>
         <input formControlName="stage"
-          class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
+          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600">
       </div>
     </div>
   </div>
-  <div class="border-2 border-rose-200 rounded-xl p-2">
+  <div class="p-2 border-2 border-rose-200 rounded-xl">
     <ul>
       <ol *ngFor="let pokemonForm of teamArray.controls; let i = index">
         <pokemon-form [pokemonForm]="$any(pokemonForm)" [formIndex]="i" (deletePokemonEvent)="deletePokemon($event)"
@@ -23,9 +23,9 @@
       </ol>
     </ul>
     <button (click)="addNewPokemon()"
-      class="bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Add</button>
+      class="px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600">Add</button>
   </div>
   <button type="submit"
-    class="w-1/6 bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Submit</button>
+    class="w-1/6 px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600">Submit</button>
 </form>
 {{matchupForm.value | json}}<br>
