--- a/src/app/registration/signup/signup.component.html
+++ b/src/app/registration/signup/signup.component.html
@@ -1,9 +1,9 @@
-<div class="flex flex-col items-center justify-center h-full w-full px-6 py-8">
+<div class="flex flex-col items-center justify-center w-full h-full px-6 py-8">
     <a href="#" class="flex items-center mb-6 text-2xl font-semibold">
         <img class="w-8 h-8 mr-2" src="../../../13luken.ico" alt="logo">
         Pokemon DraftZone
     </a>
-    <div class="w-full bg-slate-100 rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
+    <div class="w-full rounded-lg shadow bg-slate-100 md:mt-0 sm:max-w-md xl:p-0">
         <div class="p-4 space-y-4 md:space-y-6 sm:p-8">
             <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                 Register a new account
@@ -37,7 +37,7 @@
                         not match</small>
                 </div>
                 <button [disabled]="signupForm.invalid" type="submit" (click)="onSubmit()"
-                    class="w-full bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-lg px-5 py-2 text-center">Sign
+                    class="w-full px-5 py-2 text-lg font-medium text-center rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300">Sign
                     up</button>
                 <p class="text-sm font-light text-gray-500">
                     Already have an account? <a href="/login/" class="font-medium text-primary-600 hover:underline">Log
