--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,39 @@
 <div class="flex flex-col justify-between h-screen">
-    <header class="z-10 flex w-full border-b-2 bg-slate-300 border-slate-400">
-        <a class="p-2 text-xl" routerLink="/">DraftZone</a>
-        <div class="flex px-10 py-2 space-x-6">
-            <a routerLink="/draft">Draft</a>
-            <a class="opacity-50">Planner</a>
-            <a class="opacity-50">Statistics</a>
-        </div>
-        <div class="flex justify-end flex-grow p-2">
-            <div class="actions login__block__actions">
-                <div class="dropdown" [ngClass]="{'open':showOption}">
-                    <div data-toggle="dropdown" (click)="toggleOption()">
-                        <div #loginpopup class="px-4">Lumaris</div>
-                    </div>
-                    <ul class="absolute p-4 bg-slate-300 dropdown-menu pull-right" *ngIf="this.showOption">
-                        <li><a data-block="#l-register" class="opacity-50">Settings</a></li>
-                        <li><a data-block="#l-forget-password" routerLink="/login">Sign out</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main class="w-full h-full mb-auto overflow-y-auto">
-        <router-outlet></router-outlet>
-    </main>
-    <footer class="z-10 flex justify-end w-full border-t-2 bg-slate-300 border-slate-400">
-        <a href="https://discord.gg/sQUEBW4UVx"><img class="h-5 mx-5 my-1"
-                src="../assets/icons/discord-mark-blue.svg"></a>
-    </footer>
+  <header class="z-10 flex w-full border-b-2 bg-slate-300 border-slate-400">
+    <a class="p-2 text-xl" routerLink="/">DraftZone</a>
+    <div class="flex px-10 py-2 space-x-6">
+      <a routerLink="/draft">Draft</a>
+      <a class="opacity-50">Planner</a>
+      <a class="opacity-50">Statistics</a>
+    </div>
+    <div class="flex justify-end flex-grow p-2">
+      <div class="actions login__block__actions">
+        <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
+          <button
+            (click)="
+              auth.logout({
+                logoutParams: { returnTo: 'http://localhost:4200/' }
+              })
+            "
+          >
+            Log out
+          </button>
+        </ng-container>
+
+        <ng-template #loggedOut>
+          <button (click)="auth.loginWithPopup()">Log in</button>
+        </ng-template>
+      </div>
+    </div>
+  </header>
+  <main class="w-full h-full mb-auto overflow-y-auto">
+    <router-outlet></router-outlet>
+  </main>
+  <footer
+    class="z-10 flex justify-end w-full border-t-2 bg-slate-300 border-slate-400"
+  >
+    <a href="https://discord.gg/sQUEBW4UVx"
+      ><img class="h-5 mx-5 my-1" src="../assets/icons/discord-mark-blue.svg"
+    /></a>
+  </footer>
 </div>
