--- a/src/app/draft-overview/draft-overview.component.html
+++ b/src/app/draft-overview/draft-overview.component.html
@@ -1,16 +1,3 @@
 <div class="p-2 m-2 border-2 bg-cyan-100 rounded-xl border-cyan-200">
-  <div *ngIf="!formVisible">
-    <p class="text-3xl bold" *ngIf="teams">Drafts</p>
-    <div id="teams" class="grid h-auto grid-flow-row grid-cols-1 overflow-auto md:grid-cols-2 lg:grid-cols-3">
-      <draft-preview *ngFor="let team of teams.reverse()" [team]="team"></draft-preview>
-    </div>
-    <button (click)="formVisible=true"
-      class="p-2 m-3 rounded-full shadow-md bg-cyan-300 hover:shadow shadow-cyan-600">Add
-      League</button>
-  </div>
-  <div *ngIf="formVisible">
-    <button (click)="formVisible=false"
-      class="p-2 m-3 rounded-full shadow-md bg-cyan-300 hover:shadow shadow-cyan-600">Cancel</button>
-    <draft-form></draft-form>
-  </div>
+  <router-outlet></router-outlet>
 </div>
