--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -1,33 +1,79 @@
-<div class="m-2 shadow-md bg-cyan-200 shadow-cyan-600 rounded-xl">
-  <div class="p-2 shadow-md bg-cyan-300 rounded-xl">
-    <div class="flex w-full">
-      <div class="w-3/5 p-1 mx-1 text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600">
-        {{ team.leagueName }}</div>
-      <div class="w-1/5 p-1 text-xs text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600">
-        {{ team.ruleset }}</div>
-      <div class="w-1/5 p-1 mx-1 text-xs text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600">
-        {{ team.format }}</div>
-    </div>
-    <div class="grid grid-cols-6 px-4 pt-2 sprites">
-      <sprite *ngFor="let pokemon of team.team" [pokemonId]="pokemon.pid"></sprite>
-    </div>
-  </div>
-  <div class="flex" *ngIf="!archiveConfirm">
-    <a class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500">Stats</a>
-    <a class="w-1/2 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-      [routerLink]="'/draft/'+team.leagueId">Matches</a>
-    <a class="m-2 text-center shadow w-1/8 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500">Edit
-    </a>
-    <a class="m-2 text-center shadow w-1/8 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
-      (click)="archiveConfirm=true">Archive
-    </a>
-  </div>
-  <div class="flex" *ngIf="archiveConfirm">
-    <div class="w-1/2 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl">Are you sure you
-      want to archive?</div>
-    <div class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl">Yes</div>
-    <div class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-      (click)="archiveConfirm=false">No
+<p class="text-3xl bold" *ngIf="teams">Drafts</p>
+<div
+  id="teams"
+  class="grid h-auto grid-flow-row grid-cols-1 overflow-auto md:grid-cols-2 lg:grid-cols-3"
+>
+  <div *ngFor="let team of teams.reverse()">
+    <div class="m-2 shadow-md bg-cyan-200 shadow-cyan-600 rounded-xl">
+      <div class="p-2 shadow-md bg-cyan-300 rounded-xl">
+        <div class="flex w-full">
+          <div
+            class="w-3/5 p-1 mx-1 text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600"
+          >
+            {{ team.leagueName }}
+          </div>
+          <div
+            class="w-1/5 p-1 text-xs text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600"
+          >
+            {{ team.ruleset }}
+          </div>
+          <div
+            class="w-1/5 p-1 mx-1 text-xs text-center rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600"
+          >
+            {{ team.format }}
+          </div>
+        </div>
+        <div class="grid grid-cols-6 px-4 pt-2 sprites">
+          <sprite
+            *ngFor="let pokemon of team.team"
+            [pokemonId]="pokemon.pid"
+          ></sprite>
+        </div>
+      </div>
+      <div class="flex" *ngIf="!archiveConfirm">
+        <a
+          class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
+          >Stats</a
+        >
+        <a
+          class="w-1/2 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          [routerLink]="'/draft/' + team.leagueId"
+          >Matches</a
+        >
+        <a
+          class="m-2 text-center shadow w-1/8 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
+          >Edit
+        </a>
+        <a
+          class="m-2 text-center shadow w-1/8 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
+          (click)="archiveConfirm = true"
+          >Archive
+        </a>
+      </div>
+      <div class="flex" *ngIf="archiveConfirm">
+        <div
+          class="w-1/2 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+        >
+          Are you sure you want to archive?
+        </div>
+        <div
+          class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+        >
+          Yes
+        </div>
+        <div
+          class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          (click)="archiveConfirm = false"
+        >
+          No
+        </div>
+      </div>
     </div>
   </div>
 </div>
+<button
+  [routerLink]="'/draft/new'"
+  class="p-2 m-3 rounded-full shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+>
+  Add League
+</button>
