discord new tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
   <footer
     class="z-10 flex justify-end w-full border-t-2 bg-slate-300 border-slate-400"
   >
-    <a href="https://discord.gg/sQUEBW4UVx"
+    <a href="https://discord.gg/sQUEBW4UVx" target="_blank"
       ><img class="h-5 mx-5 my-1" src="../assets/icons/discord-mark-blue.svg"
     /></a>
   </footer>
