Edit loads draft successfully

--- a/src/app/draft-overview/draft-form/draft-form.component.html
+++ b/src/app/draft-overview/draft-form/draft-form.component.html
@@ -1,10 +1,14 @@
-<p class="text-3xl bold">New League</p>
-<button
-  [routerLink]="'/draft/'"
-  class="p-2 m-3 rounded-full shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
->
-  Cancel
-</button>
+<div class="flex">
+  <button
+    [routerLink]="'/draft/'"
+    class="p-2 m-3 rounded-full shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+  >
+    Cancel
+  </button>
+  <div>
+    <p class="text-3xl bold">{{ title }}</p>
+  </div>
+</div>
 <form
   [formGroup]="draftForm"
   (ngSubmit)="onSubmit()"
