--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -41,7 +41,9 @@
           >Matches</a
         >
         <a
-          class="m-2 text-center shadow w-1/8 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
+          class="m-2 text-center shadow w-1/8 bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          [routerLink]="'edit'"
+          [queryParams]="{ draft: team.leagueId | json }"
           >Edit
         </a>
         <a
