--- a/src/app/opponent-overview/opponent-form/opponent-form.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form.component.html
@@ -1,31 +1,50 @@
 <p class="text-3xl bold">New Draft</p>
-<form [formGroup]="matchupForm" (ngSubmit)="onSubmit()"
-  class="p-2 m-2 space-y-3 bg-red-300 shadow-md team hover:shadow-md shadow-red-600 rounded-xl">
+<form
+  [formGroup]="matchupForm"
+  (ngSubmit)="onSubmit()"
+  class="p-2 m-2 space-y-3 bg-red-300 shadow-md team hover:shadow-md shadow-red-600 rounded-xl"
+>
   <div class="w-full">
     <div class="flex space-x-3">
       <div class="w-1/3">
         <label class="p-1">Team Name</label>
-        <input formControlName="teamName"
-          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600">
+        <input
+          formControlName="teamName"
+          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
+        />
       </div>
       <div class="w-1/3">
         <label class="p-1">Stage</label>
-        <input formControlName="stage"
-          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600">
+        <input
+          formControlName="stage"
+          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
+        />
       </div>
     </div>
   </div>
   <div class="p-2 border-2 border-rose-200 rounded-xl">
     <ul>
       <ol *ngFor="let pokemonForm of teamArray.controls; let i = index">
-        <pokemon-form [pokemonForm]="$any(pokemonForm)" [formIndex]="i" (deletePokemonEvent)="deletePokemon($event)"
-          (addPokemonEvent)="addNewPokemon(i, $event)"></pokemon-form>
+        <pokemon-form
+          [pokemonForm]="$any(pokemonForm)"
+          [formIndex]="i"
+          (deletePokemonEvent)="deletePokemon($event)"
+          (addPokemonEvent)="addNewPokemon(i, $event)"
+        ></pokemon-form>
       </ol>
     </ul>
-    <button (click)="addNewPokemon()"
-      class="px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600">Add</button>
+    <button
+      (click)="addNewPokemon()"
+      class="px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600"
+    >
+      Add
+    </button>
   </div>
-  <button type="submit"
-    class="w-1/6 px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600">Submit</button>
+  <button
+    type="submit"
+    class="w-1/6 px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600"
+  >
+    Submit
+  </button>
 </form>
-{{matchupForm.value | json}}<br>
+{{ matchupForm.value | json }}<br />
