disabled logging information and color correction

--- a/src/app/draft-overview/draft-form/draft-form.component.html
+++ b/src/app/draft-overview/draft-form/draft-form.component.html
@@ -46,7 +46,7 @@
       </div>
     </div>
   </div>
-  <div class="p-2 border-2 border-rose-200 rounded-xl">
+  <div class="p-2 border-2 border-cyan-200 rounded-xl">
     <ul>
       <ol *ngFor="let pokemonForm of teamArray.controls; let i = index">
         <pokemon-form
@@ -71,4 +71,4 @@
     Submit
   </button>
 </form>
-{{ draftForm.value | json }}<br />
+<!-- {{ draftForm.value | json }} -->
