get edit and get teamid param

--- a/src/app/opponent-overview/opponent-form/opponent-form.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form.component.html
@@ -1,11 +1,10 @@
 <div class="flex">
   <button
-    [routerLink]="'/draft/' + teamId"
     class="p-2 m-3 bg-red-300 rounded-full shadow-md hover:shadow shadow-red-600"
   >
-    Cancel
+    <a [routerLink]="'/draft/' + teamId">Cancel</a>
   </button>
-  <p class="text-3xl bold">New Draft</p>
+  <p class="text-3xl bold">{{ title }}</p>
 </div>
 <form
   [formGroup]="matchupForm"
